tests/machine/x/pascal/left_join_multi.error
line: 81
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/left_join_multi.pas
left_join_multi.pas(49,11) Error: Identifier not found "c"
left_join_multi.pas(51,46) Error: Identifier not found "c"
left_join_multi.pas(53,15) Error: Identifier not found "i"
left_join_multi.pas(55,42) Error: Identifier not found "i"
left_join_multi.pas(59,42) Error: Identifier not found "c"
left_join_multi.pas(60,42) Error: Identifier not found "i"
left_join_multi.pas(65,15) Error: Identifier not found "i"
left_join_multi.pas(68,42) Error: Identifier not found "c"
left_join_multi.pas(69,42) Error: Identifier not found "i"
left_join_multi.pas(81) Fatal: There were 9 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

